--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.12.0",
     "react-tooltip": "^5.13.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.12"
+    "sweetalert2": "^11.7.12",
+    "swiper": "^9.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
